# xuegao-web3

./: .gitignore  .gitmodules  FlattenedNewNftManager.sol  README.md  foundry.toml  go.mod  package.json  remappings.txt  verification_input.json
wallet/: Cargo.toml  log4rs.yml
wallet/sql/: default_insert.sql  init_sql.sql
wallet/src/: main.rs
wallet/src/business/: mod.rs
wallet/src/business/api/: api_controller.rs
wallet/src/business/chain_scan/: eth_scan.rs  mod.rs
wallet/src/business/chain_service/: create_address_service.rs  eth_call_service.rs  eth_call_service_test.rs  eth_sign_service.rs  eth_sign_service_test.rs  mod.rs
wallet/src/business/config/: constant.rs  db.rs  mod.rs
wallet/src/business/eth/: mod.rs
wallet/src/business/eth/call/: eth_call.rs  eth_call_service.rs  eth_call_service_test.rs  eth_call_test.rs  eth_sign.rs  eth_sign_service.rs  eth_sign_service_test.rs  eth_sign_test.rs  mod.rs
wallet/src/business/eth/model/: mod.rs
wallet/src/business/eth/service/: create_address_service.rs  eth_call_service.rs  mod.rs
wallet/src/business/job/: collection_cold_job.rs  deposit_job.rs  mod.rs
wallet/src/business/model/: mod.rs
wallet/src/business/model/chain/: mod.rs
wallet/src/business/model/do/: address.rs  balance.rs  block.rs  deposit.rs  mod.rs  token.rs  transaction.rs  withdraw.rs
wallet/src/business/model/doo/: address.rs  address_do.rs  balance.rs  balance_do.rs  block.rs  deposit.rs  mod.rs  token.rs  transaction.rs  withdraw.rs
wallet/src/business/model/enums/: address_type_enum.rs  coin_type_enum.rs  mod.rs
wallet/src/business/service/: balance_service.rs  block_service.rs  chain_scan.rs  chain_scan_service.rs  deposit_service.rs  mod.rs  token_service.rs  transaction_service.rs  withdraw_service.rs
wallet/src/business/wallet/: mod.rs
wallet/src/business/wallet/api/: api_controller.rs
wallet/src/business/wallet/job/: deposit_job.rs  withdraw_job.rs
wallet/src/business/wallet/model/: mod.rs
wallet/src/business/wallet/service/: address_service.rs  (+2 more)
wallet/src/config/: constant.rs  mod.rs
wallet/src/framework/: mod.rs
wallet/src/framework/common/: mod.rs
wallet/src/framework/util/: mod.rs  req_util.rs  time_chrono_util.rs  time_util.rs
wallet/src/framework/web/: fmk_error.rs  fmk_result.rs
wallet/src/util/: mod.rs  req_util.rs
wallet/tests/: mod.rs
xuegao_fmk/: Cargo.toml
xuegao_fmk/src/: config.rs  lib.rs  util.rs  web.rs
xuegao_fmk/src/common/: constant.rs
xuegao_fmk/src/config/: log.rs  log4rs.rs  slog.rs
xuegao_fmk/src/util/: mod.rs  req_util.rs  time_chrono_util.rs
xuegao_fmk/src/web/: fmk_error.rs  fmk_result.rs  mod.rs
(+136 files in other folders)
