[package]
name = "wallet"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[dependencies]
actix-web = "4.8.0"
actix-http = "3.8.0"
tokio = { version = "1.38.0", features = ["full"] }
actix-rt = "2.10.0"
reqwest = { version = "0.12.5", features = ["json"] }
chrono = { version = "0.4.38", features = ["serde"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
#derive_more = "0.99.18"

sqlx = { version = "0.7.4", features = ["postgres", "runtime-tokio-rustls", "chrono", "rust_decimal"] }
rust_decimal = { version = "1.35.0", features = ["db-postgres"] }
ethers = { version = "2.0.14" }
rand = "0.8.5"
hex = "0.4.3"

log = "0.4.22"
log4rs = "1.3.0"

xuegao_fmk = { path = "../xuegao_fmk" }


