[package]
name = "xuegao_fmk"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.8.0"
actix-http = "3.8"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
derive_more = "0.99.18"
reqwest = { version = "0.12.5", features = ["json"] }
chrono = { version = "0.4.38", features = ["serde"] }
