[package]
name = "xuegao_fmk"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.8.0"
actix-http = "3.8"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
derive_more = "0.99.18"
reqwest = { version = "0.12.5", features = ["json"] }
chrono = { version = "0.4.38", features = ["serde"] }

log = "0.4.22"
log4rs = "1.3.0"

#env_logger = "0.11.3"

#slog = "2.7.0"
#slog-async = "2.8.0"
#slog-term = "2.9.1"
#slog-json = "2.6.1"
#slog-envlogger = "2.2.0"


